--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
    <!-- End Matomo Code -->
 </head>
 <body>
-	<div align="center">	<img src="logo.png" align="middle" width="80%" alt="Vacha AI- The Speech Recognition Engine for Indian Languages" >
+	<div align="center">	<img src="img/logo.png" align="middle" width="80%" alt="Vacha AI- The Speech Recognition Engine for Indian Languages" >
 	<br>
 	<blockquote><i>Speak with machines in your Vacha!</i></blockquote>
 	<br> 
-	<a href="https://lok.vacha.ai/">Lok Vacaha</a> | <a href="#">Discussion</a> | <a href="#">Blog</a>
+	<a href="https://lok.vacha.ai/">Lok Vacaha</a> 
 	</div>
 </body>
 </html>
