--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 	<br>
 	<blockquote><i>Speak with machines in your Vacha!</i></blockquote>
 	<br> 
-	<a href="https://lok.vacha.ai/">Lok Vacaha</a> 
+	<a href="https://lok.vacha.ai/">Lok.Vacha</a> 
 	</div>
 </body>
 </html>
