--- a/index.html
+++ b/index.html
@@ -8,14 +8,14 @@
 	_paq.push(['trackPageView']);
 	_paq.push(['enableLinkTracking']);
 	(function() {
-	  var u="//stat.jyoti.host/";
+	  var u="https://stats.vacha.ai/";
 	  _paq.push(['setTrackerUrl', u+'matomo.php']);
 	  _paq.push(['setSiteId', '1']);
 	  var d=document, g=d.createElement('script'), s=d.getElementsByTagName('script')[0];
 	  g.type='text/javascript'; g.async=true; g.defer=true; g.src=u+'matomo.js'; s.parentNode.insertBefore(g,s);
 	})();
    </script>
-   <!-- End Matomo Code -->
+   <!-- End Matomo Code -->   
 </head>
 <body>
 	<div align="center">	<img src="img/logo.png" align="middle" width="80%" alt="Vacha AI- The Speech Recognition Engine for Indian Languages" >
