added-email and links

--- a/index.html
+++ b/index.html
@@ -22,9 +22,10 @@
 	<br>
 	<blockquote><i>Speak with machines in your Vacha!</i></blockquote>
 	<br> 
-	<a href="#">Lok.Vacha</a> | 
-	<a href="#">We are hiring!</a> 
+	<a href="https://lok.vacha.ai" target="_blank">Lok.Vacha</a> | 
+	<a href="https://www.linkedin.com/company/vacha-ai/jobs/">We are hiring!</a> 
 	<br>
+	Contact: <strong>info@vacha.ai</strong>
 
 </div>
 </body>
