--- a/careers.html
+++ b/careers.html
@@ -18,13 +18,24 @@
    <!-- End Matomo Code -->   
 </head>
 <body>
-	<div align="center">	<img src="img/logo.png" align="middle" width="80%" alt="Vacha AI- The Speech Recognition Engine for Indian Languages" >
+	<div>
+		<h2>We are looking for passionate developers, data analysts, linguists &amp; more!</h2>
+		<ol>
+			<li>Chief Data Scientist Or Co-Founder</li>
+			<li>Executive Linguists</li>
+			<li>FullStack JavaScript Developer</li>
+			<li>Data Engineer (Python &amp; Machine Learning)</li>
+			<li>Community Manager</li>
+			<li>MultiMedia Programmer</li>
+			<li>Product Evangelist</li>
+			<li>Analytical Linguist (Indic Vernacular NLP)</li>
+		</ol>
+	</div>
+	<div align="center" id="footer">	
+	<a href="https://lok.vacha.ai" target="_blank">Lok.Vacha</a> | 
+	<a href="https://www.linkedin.com/company/vacha-ai/jobs/">We are hiring!</a> 
 	<br>
-	<blockquote><i>Speak with machines in your Vacha!</i></blockquote>
-	<br> 
-	<a href="#">Lok.Vacha</a> | 
-	<a href="#">We are hiring!</a> 
-	<br>
+	Contact: <strong>info@vacha.ai</strong>
 
 </div>
 </body>
