added-company info

--- a/careers.html
+++ b/careers.html
@@ -35,8 +35,7 @@
 	<a href="https://lok.vacha.ai" target="_blank">Lok.Vacha</a> | 
 	<a href="https://www.linkedin.com/company/vacha-ai/jobs/">We are hiring!</a> 
 	<br>
-	Contact: <strong>info@vacha.ai</strong>
-
-</div>
+		Contact: <strong>info@vacha.ai</strong> | &copy; Linguistics Labs India Pvt. Ltd.
+	</div>
 </body>
 </html>
