--- a/index.html
+++ b/index.html
@@ -18,15 +18,16 @@
    <!-- End Matomo Code -->   
 </head>
 <body>
-	<div align="center">	<img src="img/logo.png" align="middle" width="80%" alt="Vacha AI- The Speech Recognition Engine for Indian Languages" >
+	<div align="center">	
+		<img src="img/logo.png" align="middle" width="80%" alt="Vacha AI- The Speech Recognition Engine for Indian Languages" >
 	<br>
 	<blockquote><i>Speak with machines in your Vacha!</i></blockquote>
-	<br> 
-	<a href="https://lok.vacha.ai" target="_blank">Lok.Vacha</a> | 
-	<a href="https://www.linkedin.com/company/vacha-ai/jobs/">We are hiring!</a> 
-	<br>
-	Contact: <strong>info@vacha.ai</strong>
-
-</div>
+	</div>
+	<div align="center" id="footer">	
+		<a href="https://lok.vacha.ai" target="_blank">Lok.Vacha</a> | 
+		<a href="https://www.linkedin.com/company/vacha-ai/jobs/">We are hiring!</a> 
+		<br>
+		Contact: <strong>info@vacha.ai</strong> | &copy; Linguistics Labs India Pvt. Ltd.
+	</div>
 </body>
 </html>
