--- a/index.html
+++ b/index.html
@@ -24,10 +24,12 @@
 	<blockquote><i>Speak with machines in your Vacha!</i></blockquote>
 	</div>
 	<div align="center" id="footer">	
-		<a href="https://lok.vacha.ai" target="_blank">Lok.Vacha</a> | 
-		<a href="https://www.linkedin.com/company/vacha-ai/jobs/">We are hiring!</a> 
+		<a href="/">Home</a> |
+		<a href="#" title="लोक वाचा">Lok.Vacha</a> |
+		<a href="#" title="कोमल वाचा">Komal.Vacha</a> | 
+		<a href="careers.html">We are hiring!</a> 
 		<br>
-		Contact: <strong>info@vacha.ai</strong> | &copy; Linguistics Labs India Pvt. Ltd.
+		<strong>info@vacha.ai</strong> | <a href="https://twitter.com/vachaai/" target="_blank">Twitter</a> | <a href="https://www.linkedin.com/company/vacha-ai/" target="_blank">LinkedIn</a> | &copy; Linguistics Labs (India) Pvt. Ltd.
 	</div>
 </body>
 </html>
