--- a/careers.html
+++ b/careers.html
@@ -20,22 +20,24 @@
 <body>
 	<div>
 		<h2>We are looking for passionate developers, data analysts, linguists &amp; more!</h2>
+		<p>If you're interested in applying one of the following positions, plesae send us an email (given in footer)</p>
 		<ol>
 			<li>Chief Data Scientist Or Co-Founder</li>
-			<li>Executive Linguists</li>
-			<li>FullStack JavaScript Developer</li>
+			<li>Analytical Linguist (Indic Vernacular NLP)</li>
+			<li>Executive Linguists (multiple positions)</li>
+			<li>FullStack JavaScript Developer (+ CSS, HTML)</li>
 			<li>Data Engineer (Python &amp; Machine Learning)</li>
 			<li>Community Manager</li>
 			<li>MultiMedia Programmer</li>
 			<li>Product Evangelist</li>
-			<li>Analytical Linguist (Indic Vernacular NLP)</li>
 		</ol>
-	</div>
-	<div align="center" id="footer">	
-	<a href="https://lok.vacha.ai" target="_blank">Lok.Vacha</a> | 
-	<a href="https://www.linkedin.com/company/vacha-ai/jobs/">We are hiring!</a> 
-	<br>
-		Contact: <strong>info@vacha.ai</strong> | &copy; Linguistics Labs India Pvt. Ltd.
-	</div>
+		<div align="center" id="footer">	
+			<a href="/">Home</a> |
+			<a href="#" title="लोक वाचा">Lok.Vacha</a> |
+			<a href="#" title="कोमल वाचा">Komal.Vacha</a> | 
+			<a href="careers.html">We are hiring!</a> 
+			<br>
+			<strong>info@vacha.ai</strong> | <a href="https://twitter.com/vachaai/" target="_blank">Twitter</a> | <a href="https://www.linkedin.com/company/vacha-ai/" target="_blank">LinkedIn</a> | &copy; Linguistics Labs (India) Pvt. Ltd.
+		</div>
 </body>
 </html>
