remote-first company

--- a/careers.html
+++ b/careers.html
@@ -20,11 +20,11 @@
 <body>
 	<div>
 		<h2>We are looking for passionate developers, data analysts, linguists &amp; more!</h2>
-		<p>If you're interested in applying one of the following positions, plesae send us an email (given in footer)</p>
+		<p>We are a <i>remote-first</i> Startup! If you're interested in applying one of the following positions, plesae send us an email (given in footer)</p>
 		<ol>
 			<li>Chief Data Scientist Or Co-Founder</li>
 			<li>Analytical Linguist (Indic Vernacular NLP)</li>
-			<li>Executive Linguists (multiple positions)</li>
+			<li>Executive Linguists (Multiple Positions)</li>
 			<li>FullStack JavaScript Developer (+ CSS, HTML)</li>
 			<li>Data Engineer (Python &amp; Machine Learning)</li>
 			<li>Community Manager</li>
