added job application

--- a/careers.html
+++ b/careers.html
@@ -27,9 +27,11 @@
 			<li>Executive Linguists (Multiple Positions)</li>
 			<li>FullStack JavaScript Developer (+ CSS, HTML)</li>
 			<li>Data Engineer (Python &amp; Machine Learning)</li>
-			<li>Community Manager</li>
-			<li>MultiMedia Programmer</li>
-			<li>Product Evangelist</li>
+			<li>Executive Secretary (Personal Assistant)</li>
+			<li>Business Accountant (Book Keeping & Taxes)</li>
+			<li>Community Manager (Outreach &amp; Marketing)</li>
+			<li>MultiMedia Programmer (Audio, Video, Image Editor)</li>
+			<li>Product Evangelist (Social Media Influencer)</li>
 		</ol>
 		<div align="center" id="footer">	
 			<a href="/">Home</a> |
