link to apply page

--- a/careers.html
+++ b/careers.html
@@ -18,6 +18,7 @@
 			<li>MultiMedia Programmer (Audio, Video, Image Editor)</li>
 			<li>Product Evangelist (Social Media Influencer)</li>
 		</ol>
+		<p><a href="apply.html">Click to Apply</a> if one of above post suits your skills and experience.</p>
 		<div align="center" id="footer">	
 			<a href="/">Home</a> |
 			<a href="#" title="लोक वाचा">Lok.Vacha</a> |
