--- a/careers.html
+++ b/careers.html
@@ -25,7 +25,7 @@
 			<a href="#" title="कोमल वाचा">Komal.Vacha</a> | 
 			<a href="careers.html">We are hiring!</a> 
 			<br>
-			<strong>info@vacha.ai</strong> | <a href="https://twitter.com/vachaai/" target="_blank">Twitter</a> | <a href="https://www.linkedin.com/company/vacha-ai/" target="_blank">LinkedIn</a> | &copy; Linguistics Labs (India) Pvt. Ltd.
+			<strong>info@vacha.ai</strong> | <a href="https://twitter.com/vachaai/" target="_blank">Twitter</a>  
 		</div>
 </body>
 </html>
