adding meta data
adding viewport & meta description

--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 <html>
 <head>
 	<title>Vacha AI | Teaching Machines the language we speak!</title>
+	<meta name="description" content="Automated Speech Recognition system for Indian languages." /> 
+	<meta name="viewport" content="width=device-width, initial-scale=1" />
+
 </head>
 <body>
 	<div align="center">	
